--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "rimraf dist && nest build && cp -r convex/_generated dist/convex/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "rimraf dist && nest build && cp -r convex/_generated dist/convex/ && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -24,7 +24,9 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "convex": "^1.29.3",
+    "dotenv": "^17.2.3",
     "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.1.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
